[gd_scene load_steps=2 format=3 uid="uid://f2i0ysltk7fr"]

[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Game UI/fight_stats.gd" id="1_iwqbc"]

[node name="fight_stats" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_iwqbc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FightTime" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="TotalTime" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DamageTaken" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="NumOfDeaths" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="FightType" type="Label" parent="VBoxContainer"]
layout_mode = 2
